apps/step-certificates/overlays/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: step-certificates
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: incluster
    cert-manager.io/cluster-issuer: house

spec:
  rules:
    - host: ca.apps.infra.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  step-certificates
                port:
                  name: http
  tls:
    - hosts:
      - ca.apps.infra.house
      secretName: step-certificates-cert
